kustomize/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gose
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: gose
