kustomize/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gose
spec:
  ingressClassName: nginx
  rules:
  - host: gose.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gose
            port:
              number: 80
